--- a/styles/cart.css
+++ b/styles/cart.css
@@ -27,18 +27,36 @@
     height: auto;
 }
 
+.cart-item {}
+.cart-item img, .cart-item p {
+    display: inline-block;
+    vertical-align: middle;
+}
+.cart-item img {
+    width: 50px;
+}
+
 .shopping-cart {
     background-color: white;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    max-width: 300px;
+    width: 300px;
     max-height: 500px;
     height: 300px;
     box-sizing: border-box;
     box-shadow: 0px 10px 10px #666;
     position: fixed;
     right: 0;
+    top: 10%;
+}
+
+#country-flag {
+    width: 100%;
+    padding: 20px;
+}
+#country-flag img {
+    vertical-align: middle;
 }
 
 @media (max-width: 768px) {
