--- a/styles/cart.css
+++ b/styles/cart.css
@@ -50,7 +50,7 @@
     position: fixed;
     right: 0;
     top: 10%;
-    overflow-y: auto; /* Añadir esta línea */
+    overflow-y: auto;
 }
 
 #country-flag {
