--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,93 @@
+/* Establecer la fuente principal */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    text-align: center; /* Centrar texto en todo el cuerpo */
+}
+
+/* Estilo de la barra de navegación */
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center; /* Centrar la barra de navegación */
+    width: 100%; /* Ocupa todo el ancho disponible */
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    padding: 15px 20px;
+    display: flex;
+    align-items: center;
+    font-size: 1.2em;
+}
+
+nav ul li a:hover {
+    background-color: #575757;
+}
+
+nav ul li a i {
+    margin-right: 8px;
+}
+
+/* Estilo para los nombres de los integrantes */
+.nombres-integrantes {
+    font-size: 1.1em;
+    font-weight: 700;
+    color: #2c3e50;
+    line-height: 1.6;
+}
+
+/* Estilo para la descripción de los productos */
+.descripcion-producto {
+    font-size: 0.9em;
+    color: #555;
+}
+
+/* Imágenes con tamaño ajustado */
+img {
+    max-width: 50%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+}
+
+/* Ajustar video */
+video {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+main {
+    width: 80%;
+    max-width: 800px;
+    margin: 20px 0;
+}
+
+footer {
+    margin-top: 20px;
 }
 
 header {
     background: url(../img/watch_banner.jpg);
-    background-size: cover;
+    background-size: contain;
     background-position: center;
-    height: 200px;
+    height: 150px;
     margin-top: 0;
     text-align: center;
-    padding-top: 2em;
+    padding-top: 6em;
+    width: 100%;
 }
 header a {
     background-color: #007bff;
@@ -29,12 +104,6 @@ header a:hover {
     background-color: #fff;
     cursor: pointer;
     color: #007bff;
-}
-footer {
-    text-align: center;
-    background: #303030;
-    color:#fff;
-    padding: 0.5em;
 }
 @media (max-width: 768px) {
     header a {
