--- a/styles/cart.css
+++ b/styles/cart.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 100%;
     padding: 20px;
+    max-width: 100%;
 }
 .product-list {
     display: grid;
@@ -13,14 +13,16 @@
 }
 
 .product-item {
-    background-color: white;
     padding: 10px;
-    border: 1px solid #ccc;
     border-radius: 5px;
     text-align: center;
     flex: 1 1 calc(33.333% - 1rem);
     box-sizing: border-box;
     cursor: pointer;
+    transition: all 0.3s;
+}
+.product-item:hover {
+    background-color: #f9f9f9;
 }
 
 .product-item img {
@@ -42,7 +44,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 300px;
+    width: 310px;
     max-height: 500px;
     height: 300px;
     box-sizing: border-box;
@@ -59,6 +61,9 @@
 }
 #country-flag img {
     vertical-align: middle;
+}
+#cart-items {
+    text-align: left;
 }
 
 @media (max-width: 768px) {
